<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tetris Multiplayer</string>
    <string name="start_game">Start Game</string>
    <string name="new_game">New Game</string>
    <string name="submit_score">Submit Score</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="player_name">Player Name</string>
    <string name="score">Score: %d</string>
    <string name="lines">Lines: %d</string>
    <string name="players">Players: %d/4</string>
    <string name="game_over">Game Over!</string>
    <string name="waiting_for_players">Waiting for players...</string>
    <string name="next">Next</string>
    <string name="hold">Hold</string>
    <string name="combo">%dx COMBO!</string>
    <string name="perfect_clear">PERFECT CLEAR!</string>
    <string name="controls_hint">Arrow keys to move, Up to rotate, Space to drop</string>
</resources>
